[theme-updates] - teaser image styling updates to prevent layout shift - update image-text image with image-wrapper element to contain image credit

--- a/web/themes/pippip/assets/sass/molecules/entities/_image-text.scss
+++ b/web/themes/pippip/assets/sass/molecules/entities/_image-text.scss
@@ -11,6 +11,10 @@
   gap: calc(var(--bump) / 1.5);
   align-items: center;
 
+  &__image-wrapper {
+    position: relative;
+  }
+
   @include media('<md') {
     grid-template-columns: 1fr;
     gap: calc(var(--bump) / 2);
