--- a/web/themes/pippip/assets/sass/organisms/_teaser.scss
+++ b/web/themes/pippip/assets/sass/organisms/_teaser.scss
@@ -22,10 +22,16 @@
     }
 
     img {
-      width: 100%;
-      height: auto;
-      display: block;
       transition: var(--transition);
+      object-fit: cover;
+      object-position: center center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
     }
 
     picture {
@@ -48,6 +54,15 @@
           }
         }
       }
+    }
+
+    & > .a-media {
+      display: block;
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      padding-bottom: 66.65%;
+      height: 100%;
     }
 
     &:hover {
